Make search-app.jar executable